Feat: Header component

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
     height: 8vh;
     width: 100vw;
 
-    background-color: #598295;
+    background-color: #4e8ba8;
 
     display: flex;
     flex-direction: row;
