Refactor: naming convocation component

--- a/src/containers/Convocation/Convocation.css
+++ b/src/containers/Convocation/Convocation.css
@@ -40,7 +40,7 @@
     background-color: rgb(115, 26, 1);
 }
 /* 
-.buttonsAppointments {
+.buttonsConvocations {
     overflow-y:scroll;
 } */
 /* .searchAppointment{
