--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
     height: 8vh;
     width: 100vw;
 
-    background-color: #4e8ba8;
+    background-color: #98a84ed3;
 
     display: flex;
     flex-direction: row;
