Feat: MyPrograms component

--- a/src/containers/CreateConvocation/CreateConvocation.css
+++ b/src/containers/CreateConvocation/CreateConvocation.css
@@ -21,7 +21,7 @@
 .appointmentCardsRow .apcard {
     flex: 0 0 calc(33% - 1em); 
 } */
-.inputAppointment {
+.inputConvocation {
     text-align: center;
     width: 12em;
     height: 2em;
