--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 #root {
   /* max-width: 1280px; */
+  height: auto;
+  min-height: 100vh;
   width: 100vw;
-  height: 100vh;
-  margin: auto ;
-  padding: auto;
+  /* height: 100vh; */
+  margin: 0 ;
+  padding: 0;
   background-color: #b4de7a2a;
   
   display: flex;
