--- a/src/containers/ProgramDetail/ProgramDetail.css
+++ b/src/containers/ProgramDetail/ProgramDetail.css
@@ -2,34 +2,58 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100vh; */
-    margin-top: 3em;
-    /* min-height: 100vh; */
     min-height: 100vh;
     min-width: 100vw;
-
 }
 
 .DetailService1 {
+    box-shadow: inset 0 0 2em #98a84e92;
+    margin-top: 3.8em; 
     border-radius: 2em;
-    /* background-color: rgba(121, 161, 192, 0.9); */
-    box-shadow: 0 0 2em rgba(199, 78, 45, 0.2);
-    padding: 2em;
+    /* box-shadow: inset 0 0 2em rgba(199, 78, 45, 0.2); */
+    padding: 1em; 
     text-align: center;
     color: #834016b4;
-    
+    max-width: 100em; 
+    width: 90%; 
+    overflow: hidden; 
 }
+
 .DetailService1 img {
     border-radius: 2em;
     max-width: 100%;
     height: auto;
+    padding: 1em;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .DetailService1 h2 {
-    font-size: 1.8em; /* Aumentar el tamaño del nombre */
+    font-size: 1.8em; 
     margin-bottom: 0.5em;
 }
 
 .DetailService1 h4 {
-    font-size: 1em; /* Hacer más pequeña la descripción */
+    margin-top: 0.3em;
+    font-size: 1em; 
+}
+
+.SolicitarButton {
+    background-color: #b62525a6; 
+    color: #fff;
+    padding: 0.6em 0.9em;
+    border: none;
+    border-radius: 1em;
+    font-size: 1em;
+    cursor: pointer;
+    margin-top: 1.3em;
+    
+}
+
+.DetailService1 img:hover {
+    transform: scale(0.9); 
+}
+
+/* Hover effect */
+.SolicitarButton:hover {
+    background-color: #0056b3; 
 }
