Fix: backgrounds in Admin, Users page

--- a/src/containers/Users/Users.css
+++ b/src/containers/Users/Users.css
@@ -1,32 +1,1 @@
-.Container.usersRow {
-    margin-top: 1em;
-}
-.buttonDelete {
-    background-color: rgba(173, 10, 10, 0.462);
-    color: white;
-    width: 4em;
-    height: 3em;
-
-    border: 0.01em solid black;
-    border-radius: 50%;
-    cursor: pointer;
-    /* font-size:0.9em; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.buttonDelete:hover {
-    background-color: rgb(115, 26, 1);
-}
-
-.buttonsConvocations {
-    overflow-y:hidden;
-}
-.searchAppointment{
-    margin-top: 2em;
-}
-
-.container-max-height {
-    max-height: 25em;
-}
+/*  */
