--- a/src/containers/Admin/Admin.css
+++ b/src/containers/Admin/Admin.css
@@ -1,9 +1,9 @@
 .adminContainer {
-    width: 100vw;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
 .adminCardTitle1{
@@ -16,14 +16,11 @@
     box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, 0.1);
     cursor: pointer;
     padding: 1em;
-
     font-size: 1.2em; 
     font-weight: bold; 
     color: #333;
-
     background-color: #f0f0f0; 
     box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, 0.1); 
-
     transition: transform 0.3s ease, font-size 0.2s ease, background-color 0.3s ease;
 }
 
@@ -34,15 +31,11 @@
     width: 18em; 
     cursor: pointer;
     padding: 1em; 
-    
-
     font-size: 1.2em; 
     font-weight:bold; 
     color: #cecece;
-
     background-color: #f0f0f0; 
     box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, 0.1); 
-
     transition: transform 0.3s ease, font-size 0.2s ease, background-color 0.3s ease;
 }
 
