--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -12,21 +12,38 @@
     margin: 2em;
     margin-bottom: 1em;
     border: 0.1em solid #2e3c5a79;
+    background-color: #98a84e6c;
     padding: 1em;
     border-radius: 2em;
     display: flex;
     flex-direction: column; /* Set flex-direction to column to stack the image and text */
     align-items: center; /* Center the items horizontally */
+    transition: all 0.3s ease;
 }
 
 .productImgDesign {
+    /* background-color: #9b6236c0; */
     width: 13em;
     height: 12em;
     object-fit: contain;
     border-radius: 2em;
+    transition: all 0.3s ease; /* Agregamos una transición suave para el efecto */
+}
+
+.productImgDesign:hover {
+    transform: scale(1.5); 
+    
+    /* background-color: #36439b4b; */
+    transition: 0.3s;/* Cuando el cursor esté sobre la imagen, la hacemos crecer al 110% */
 }
 
 .productCardDesign h1 {
     font-size: 1.2em;
     margin-top: 0.5em;
+}
+.productCardDesign:hover {
+    transform: scale(1.1); 
+    
+    background-color: rgba(199, 78, 45, 0.2);
+    transition: 0.3s;/* Cuando el cursor esté sobre la imagen, la hacemos crecer al 110% */
 }
