--- a/src/containers/Admin/Admin.css
+++ b/src/containers/Admin/Admin.css
@@ -19,7 +19,7 @@
     font-size: 1.2em; 
     font-weight: bold; 
     color: #333;
-    background-color: #f0f0f0; 
+    background-color: #9f52216c; 
     box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, 0.1); 
     transition: transform 0.3s ease, font-size 0.2s ease, background-color 0.3s ease;
 }
@@ -32,9 +32,10 @@
     cursor: pointer;
     padding: 1em; 
     font-size: 1.2em; 
+    background-color: #699f216c; 
     font-weight:bold; 
-    color: #cecece;
-    background-color: #f0f0f0; 
+    color: #191818;
+    /* background-color: #f0f0f0;  */
     box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, 0.1); 
     transition: transform 0.3s ease, font-size 0.2s ease, background-color 0.3s ease;
 }
