--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -4,16 +4,17 @@
     justify-content: space-around;
     margin-top: 2em;
     
+    
 }
 
 .productCardDesign {
-    width: 18em;
-    height: 18em;
+    width: 17em;
+    width: 17em;
     margin: 2em;
     margin-bottom: 1em;
     border: 0.1em solid #2e3c5a79;
     background-color: #98a84e6c;
-    padding: 1em;
+    padding: 1.5em;
     border-radius: 2em;
     display: flex;
     flex-direction: column; /* Set flex-direction to column to stack the image and text */
@@ -25,16 +26,15 @@
     /* background-color: #9b6236c0; */
     width: 13em;
     height: 12em;
-    object-fit: contain;
+    /* object-fit: contain; */
     border-radius: 2em;
     transition: all 0.3s ease; /* Agregamos una transición suave para el efecto */
 }
 
 .productImgDesign:hover {
     transform: scale(1.5); 
-    
     /* background-color: #36439b4b; */
-    transition: 0.3s;/* Cuando el cursor esté sobre la imagen, la hacemos crecer al 110% */
+    transition: 0.5s;/* Cuando el cursor esté sobre la imagen, la hacemos crecer al 110% */
 }
 
 .productCardDesign h1 {
@@ -46,4 +46,24 @@
     
     background-color: rgba(199, 78, 45, 0.2);
     transition: 0.3s;/* Cuando el cursor esté sobre la imagen, la hacemos crecer al 110% */
+}
+.akdemyTitle {
+    margin-top: 1em;
+    font-size:5em; /* Tamaño de fuente deseado */
+    font-weight:bold; /* Puedes ajustar el peso de la fuente según tu preferencia */
+    text-transform: uppercase; /* Puedes cambiar el texto a mayúsculas si lo deseas */
+    color: #ff6600; /* Puedes cambiar el color a uno más atractivo */
+}
+.centerTitle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.akdemyTitle1{
+/* margin-right: 1em; */
+    /* margin-top: 4em; */
+    font-size:2.4em; /* Tamaño de fuente deseado */
+    font-weight:bolder; /* Puedes ajustar el peso de la fuente según tu preferencia */
+    text-transform: uppercase; /* Puedes cambiar el texto a mayúsculas si lo deseas */
+    color: #ff6600; 
 }
