--- a/src/containers/Register/Register.css
+++ b/src/containers/Register/Register.css
@@ -2,12 +2,52 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /* flex-direction: column; */
+    justify-content: space-around;
     align-items: center;
+   
+}
+.registerCard{
+    box-shadow: inset 1em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
+    border-radius: 2em;
+}
+.dataUserRegister{
+    display: flex;
+    justify-content: space-between;
+    border: 0.01em solid rgb(118, 71, 24);
+    box-shadow: inset 1em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
+    /* align-items: center; */
+    /* justify-content: space-between; */
+    border-radius: 0.5em;
+    background-color: #9f512121;
+    margin-bottom: 0.5em;
+    padding: 1.3em;
+}
+.profileLabelRegister{
+     
+    display: flex;
+    justify-content: center;
+    /* flex-direction: column; */
+    font-weight: bold;
+    font-size: 0.9em;
+    text-align: center;
+    border: 0.1em solid rgba(71, 134, 50, 0.665);
+    /* width: 20em; */
+    /* border: 0.01em solid rgb(20, 18, 16); */
+    border-radius: 0.5em;
+    padding: 0.5em;
+    margin-right: 0.5em;
+    background-color: #699f21ac; 
 }
 
-.registerCard{
-    height: 33em;
-    width: 26em;
+.dataRegister {
+    /* padding: 0.5rem; */
+    /* padding-bottom: 0.5em; */
+    border-radius: 0.5em;
+    /* margin-bottom: 0.5em; */
+    /* margin-left: 2em; */
+    font-size: 1em;
+    background-color: #d2eeca4d; 
+    box-shadow: inset 0.01em 0.01em 0.4em 0.1em rgba(10, 32, 14, 0.41); 
+    border: 0.09em solid rgba(178, 137, 66, 0.706);
 }
