--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -2,12 +2,26 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
+    
 }
-.loginForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
+.labelLogin{
+width: 10em;
+    font-weight: bold;
+    font-size: 0.9em;
+    text-align: center;
+    border: 0.1em solid rgba(71, 134, 50, 0.665);
+    /* width: 20em; */
+    /* border: 0.01em solid rgb(20, 18, 16); */
+    border-radius: 0.5em;
+    padding: 0.1em;
+    margin-top: 0.3em;
+    background-color: #699f21bd; 
+}
+.loginDataUser{
+    box-shadow: inset 0.5em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
+    border-radius: 2em;
+    background-color: #699f212b; 
 }
