--- a/src/containers/ConvocationDetail/ConvocationDetail.css
+++ b/src/containers/ConvocationDetail/ConvocationDetail.css
@@ -3,6 +3,10 @@
     padding: 2em;
     border: 1em solid #749b7381;
     border-radius: 2em;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    
 }
 
 /* .DetailAppointment1 {
@@ -12,41 +16,38 @@
 } */
 
 .program-info {
-    flex: 1;
+    border: 0.1em solid #749b7381;
+    border-radius: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .program-details {
-    margin-top: 10px;
+    margin-top: 0.3em;
 }
 
 .detail-item {
-    margin-bottom: 5px;
+    margin: 0.7em;
 }
 
-.edit-button {
-    background-color: #13326fba;
-    color: #fff;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 5px;
-    cursor: pointer;
-}
+
 
 .user-list {
-    margin-top: 20px;
+    margin-top: 0.1em;
 }
 
 .user-item {
-    margin-bottom: 10px;
+    margin-bottom: 0.2em;
 }
 
 .user-item h4 {
     margin: 0;
-    font-size: 18px;
+    font-size: 1em;
 }
 
 .user-item p {
     margin: 0;
-    font-size: 14px;
-    color: #777;
+    font-size: 0.8em;
+    color: #818181;
 }
