--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  /* max-width: 1280px; */
+
   height: auto;
   min-height: 100vh;
   width: 100vw;
@@ -13,7 +13,14 @@
   align-items: center;
   /* text-align: center; */
 }
-
+.InputSearch {
+  margin-top: 2em;
+  border: 0.2em solid black;
+  border-radius: 0.6em;
+  height: 2.4em;
+  width: 16em;
+  box-shadow: inset -0.2em -0.01em 0.4em 0.3em rgba(40, 39, 39, 0.26);
+}
 .userContainer {
   width: 100vw;
   height: 100vh;
@@ -21,6 +28,58 @@
   justify-content: center;
   align-items: center;
 }
+
+.requestUser{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4em;
+  font-weight: bold;
+  color: rgb(75, 65, 65);
+  }
+  
+  .tableContainerCheck {
+      border: 0.1em solid #aca7a7;
+      border-radius: 0.2em;
+      overflow-x: auto;
+      
+  }
+  
+  .tableHeader {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f0f0f0;
+      font-weight: bold;
+      border-bottom: 0.06em solid  #aca7a7;
+      margin-right: 3.27em;
+  }
+  
+  .tableHeaderCheck {
+      flex: 1;
+      
+      padding: 0.6em;
+      text-align: center;
+      border-right: 0.06em solid #aca7a7;
+  }
+  
+  .tableBodyCheck {
+      display: flex;
+      flex-direction: column;
+  }
+  
+  .tableDataRow {
+      display: flex;
+      border-bottom:0.06em solid #aca7a7;
+  }
+  
+  .tableDataCheck {
+      flex: 1;
+      padding: 0.7em;
+      text-align: center;
+      border-right: 0.06em solid  #aca7a7;
+  }
+  
 /* .logo {
   height: 6em;
   padding: 1.5em;
