--- a/src/components/AkdemyButton/AkdemyButton.css
+++ b/src/components/AkdemyButton/AkdemyButton.css
@@ -1,10 +1,15 @@
 .AkdemyButton {
     background-color: #90a729fd;
-    color: #fff;
+    color: #ffffff;
     padding: 0.6em 0.9em;
-    border: none;
+    border: 0.01em solid rgb(9, 71, 9);
     border-radius: 1em;
     font-size: 1em;
     cursor: pointer;
     margin-top: 1.3em;
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
+    box-shadow: inset 0.04em 0.04em 0.5em 0.2em rgba(21, 61, 9, 0.532);
+}
+.AkdemyButton:hover{
+    transform: scale(1.06);
 }
