--- a/src/components/InputText/InputText.css
+++ b/src/components/InputText/InputText.css
@@ -1,9 +1,19 @@
 .normalInput {
 
-    border-radius: 0.4em;
+    /* border-radius: 0.4em;
     border: 0.2em solid rgb(138, 138, 198);
     width: 13em;
-    height: 2em;
+    height: 2em; */
+    padding: 0.5rem;
+    padding-bottom: 0.5em;
+    border-radius: 0.5em;
+    /* margin-bottom: 0.5em; */
+    /* margin-left: 2em; */
+    font-size: 1em;
+    background-color: #d2eeca4d; 
+    box-shadow: inset 0.01em 0.01em 0.4em 0.1em rgba(10, 32, 14, 0.41); 
+    border: 0.09em solid rgba(178, 137, 66, 0.706);
+
 }
 
 .errorInput {
