--- a/src/containers/Profile/Profile.css
+++ b/src/containers/Profile/Profile.css
@@ -34,37 +34,41 @@
 
 .dataUser {
     display: flex;
+    
+    border: 0.01em solid rgb(118, 71, 24);
+    box-shadow: inset 1em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
     align-items: center;
     justify-content: space-between;
-    border: 0.1em solid rgba(178, 137, 66, 0.357);
     border-radius: 0.5em;
     background-color: #9f512121;
     margin-bottom: 1em;
     padding: 1.3em;
 }
 
-.profile-label {
+.profileLabel {
     display: flex;
     justify-content: center;
     font-weight: bold;
     text-align: center;
-    border: 0.1em solid rgba(93, 177, 64, 0.683);
-    width: 9em;
+    border: 0.1em solid rgba(71, 134, 50, 0.665);
+    /* width: 20em; */
+    /* border: 0.01em solid rgb(20, 18, 16); */
     border-radius: 0.5em;
     padding-bottom: 0.5em;
     /* margin-left: 1em; */
     background-color: #699f21ac; 
 }
 
-.profile-data {
+.profileData {
     padding: 0.5rem;
     padding-bottom: 0.5em;
     border-radius: 0.5em;
-    margin-left: 4.4em;
+    margin-bottom: 0.5em;
+    margin-left: 2em;
     font-size: 1.3em;
-    background-color: #8ffb713b; 
-    box-shadow: 1em 0.4em 1em 0.1em rgba(0, 0, 0, 0.503); 
-    border: 0.06em solid rgba(178, 137, 66, 0.357);
+    background-color: #d2eeca4d; 
+    box-shadow: inset 0.01em 0.01em 0.4em 0.1em rgba(10, 32, 14, 0.41); 
+    border: 0.09em solid rgba(178, 137, 66, 0.706);
 }
 .deleteButton{
     background-color: #90a729fd;
@@ -76,5 +80,7 @@
     margin-bottom: 0.3em;
     font-size: 1em;
     cursor: pointer;
+    border: 0.01em solid rgb(9, 71, 9);
+    box-shadow: inset 0.04em 0.04em 0.5em 0.2em rgba(21, 61, 9, 0.532);
     /* margin-top: 1.3em; */
 }
