--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -34,8 +34,7 @@
 
 .productImgDesign:hover {
     transform: scale(1.5); 
-    /* background-color: #36439b4b; */
-    transition: 0.5s;/* Cuando el cursor esté sobre la imagen, la hacemos crecer al 110% */
+    transition: 0.5s;
 }
 
 .productCardDesign h1 {
@@ -46,14 +45,14 @@
     transform: scale(1.1); 
     
     background-color: rgba(199, 78, 45, 0.2);
-    transition: 0.3s;/* Cuando el cursor esté sobre la imagen, la hacemos crecer al 110% */
+    transition: 0.3s;
 }
 .akdemyTitle {
     margin-top: 1em;
-    font-size:5em; /* Tamaño de fuente deseado */
-    font-weight:bold; /* Puedes ajustar el peso de la fuente según tu preferencia */
-    text-transform: uppercase; /* Puedes cambiar el texto a mayúsculas si lo deseas */
-    color: #ff6600; /* Puedes cambiar el color a uno más atractivo */
+    font-size:5em;
+    font-weight:bold; 
+    text-transform: uppercase; 
+    color: #ff6600;
 }
 .centerTitle{
     display: flex;
@@ -61,10 +60,9 @@
     align-items: center;
 }
 .akdemyTitle1{
-/* margin-right: 1em; */
-    /* margin-top: 4em; */
-    font-size:2.4em; /* Tamaño de fuente deseado */
-    font-weight:bolder; /* Puedes ajustar el peso de la fuente según tu preferencia */
-    text-transform: uppercase; /* Puedes cambiar el texto a mayúsculas si lo deseas */
+
+    font-size:2.4em; 
+    font-weight:bolder; 
+    text-transform: uppercase; 
     color: #ff6600; 
 }
