--- a/src/containers/ConvocationDetail/ConvocationDetail.css
+++ b/src/containers/ConvocationDetail/ConvocationDetail.css
@@ -1,5 +1,6 @@
 .convocationDetail {
     margin: 2em;
+    margin-top: 4em;
     padding: 2em;
     border: 1em solid #749b7381;
     border-radius: 2em;
@@ -16,6 +17,7 @@
 } */
 
 .program-info {
+    
     border: 0.1em solid #749b7381;
     border-radius: 2em;
     display: flex;
@@ -24,10 +26,12 @@
 }
 
 .program-details {
+    
     margin-top: 0.3em;
 }
 
 .detail-item {
+    
     margin: 0.7em;
 }
 
@@ -47,6 +51,7 @@
 }
 
 .user-item p {
+    
     margin: 0;
     font-size: 0.8em;
     color: #818181;
