--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,15 @@
 #root {
-
   height: auto;
   min-height: 100vh;
   width: 100vw;
-  /* height: 100vh; */
-  margin: 0 ;
+  margin: 0;
   padding: 0;
   background-color: #b4de7a19;
-  
   display: flex;
   justify-content: center;
   align-items: center;
-  /* text-align: center; */
 }
+
 .InputSearch {
   margin-top: 2em;
   border: 0.2em solid black;
@@ -21,6 +18,12 @@
   width: 16em;
   box-shadow: inset -0.2em -0.01em 0.4em 0.3em rgba(40, 39, 39, 0.26);
 }
+
+.errorText {
+  color: red;
+  font-size: 0.75em;
+}
+
 .userContainer {
   width: 100vw;
   height: 100vh;
@@ -29,89 +32,53 @@
   align-items: center;
 }
 
-.requestUser{
+.requestUser {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 4em;
   font-weight: bold;
   color: rgb(75, 65, 65);
-  }
-  
-  .tableContainerCheck {
-      border: 0.1em solid #aca7a7;
-      border-radius: 0.2em;
-      overflow-x: auto;
-      
-  }
-  
-  .tableHeader {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #f0f0f0;
-      font-weight: bold;
-      border-bottom: 0.06em solid  #aca7a7;
-      margin-right: 3.27em;
-  }
-  
-  .tableHeaderCheck {
-      flex: 1;
-      
-      padding: 0.6em;
-      text-align: center;
-      border-right: 0.06em solid #aca7a7;
-  }
-  
-  .tableBodyCheck {
-      display: flex;
-      flex-direction: column;
-  }
-  
-  .tableDataRow {
-      display: flex;
-      border-bottom:0.06em solid #aca7a7;
-  }
-  
-  .tableDataCheck {
-      flex: 1;
-      padding: 0.7em;
-      text-align: center;
-      border-right: 0.06em solid  #aca7a7;
-  }
-  
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tableContainerCheck {
+  border: 0.1em solid #aca7a7;
+  border-radius: 0.2em;
+  overflow-x: auto;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.tableHeader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  font-weight: bold;
+  border-bottom: 0.06em solid #aca7a7;
+  margin-right: 3.27em;
 }
 
-.card {
-  padding: 2em;
+.tableHeaderCheck {
+  flex: 1;
+
+  padding: 0.6em;
+  text-align: center;
+  border-right: 0.06em solid #aca7a7;
 }
 
-.read-the-docs {
-  color: #888;
-} */
+.tableBodyCheck {
+  display: flex;
+  flex-direction: column;
+}
+
+.tableDataRow {
+  display: flex;
+  border-bottom: 0.06em solid #aca7a7;
+}
+
+.tableDataCheck {
+  flex: 1;
+  padding: 0.7em;
+  text-align: center;
+  border-right: 0.06em solid #aca7a7;
+}
