--- a/src/containers/RequestAccepted/RequestAccepted.css
+++ b/src/containers/RequestAccepted/RequestAccepted.css
@@ -1,8 +1,6 @@
-.estimado-mensaje {
+.messageInscription {
     text-align: center;
     border-radius: 2em;
-    /* height: 40em; */
-    /* width: 30em; */
     margin: 0 auto;
     margin-top: 4em;
     max-width: 40em;
@@ -11,17 +9,17 @@
     box-shadow: inset 0.4em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
   }
   
-  .estimado-mensaje p {
+  .messageInscription p {
     list-style: none;
-    margin-bottom: 10px;
+    margin-bottom: 0.05em;
   }
   
-  .estimado-mensaje ul {
+  .messageInscription ul {
     list-style: none;
     padding: 0;
     text-align: left;
   }
   
-  .estimado-mensaje li {
-    margin-bottom: 5px;
+  .messageInscription li {
+    margin-bottom: 0.01em;
   }
