--- a/src/containers/Register/Register.css
+++ b/src/containers/Register/Register.css
@@ -9,6 +9,7 @@
 .registerCard {
     box-shadow: inset 1em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
     border-radius: 2em;
+    margin-top: 6em;
 }
 
 .dataUserRegister {
