--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,21 +16,19 @@
     padding: 0.5em;
 } 
 
-
 .linksDesignToken {
     display: flex;
-    flex-direction: row;
-    padding: 0.5em;
+    margin-bottom: 0.3em;
+    padding: 0.2em;
 }
 
 .headerLink {
     font-weight: bolder;
-    font-size: large;
-    margin: 0.2em;
+    font-size: 1.2em;
     transition: 0.5s;
     cursor: pointer;
-    margin-bottom: 0.2em;
-    margin-right: 1em;
+    margin-bottom: 0.3em;
+    margin-right: 0.5em;
 }
 
 .headerLink:hover {
