--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -3,8 +3,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 2em;
-    
-    
+    text-align: center;
 }
 
 .productCardDesign {
@@ -17,19 +16,17 @@
     padding: 1.5em;
     border-radius: 2em;
     display: flex;
-    flex-direction: column; /* Set flex-direction to column to stack the image and text */
-    align-items: center; /* Center the items horizontally */
+    flex-direction: column; 
+    align-items: center;
     transition: all 0.3s ease;
     box-shadow: 0.4em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
 }
 
 .productImgDesign {
-    /* background-color: #9b6236c0; */
     width: 13em;
     height: 12em;
-    /* object-fit: contain; */
     border-radius: 2em;
-    transition: all 0.3s ease; /* Agregamos una transición suave para el efecto */
+    transition: all 0.3s ease;
 }
 
 .productImgDesign:hover {
@@ -43,7 +40,6 @@
 }
 .productCardDesign:hover {
     transform: scale(1.1); 
-    
     background-color: rgba(199, 78, 45, 0.2);
     transition: 0.3s;
 }
@@ -53,6 +49,7 @@
     font-weight:bold; 
     text-transform: uppercase; 
     color: #ff6600;
+    text-align: center;
 }
 .centerTitle{
     display: flex;
@@ -60,7 +57,6 @@
     align-items: center;
 }
 .akdemyTitle1{
-
     font-size:2.4em; 
     font-weight:bolder; 
     text-transform: uppercase; 
