--- a/src/containers/Inscription/Inscription.css
+++ b/src/containers/Inscription/Inscription.css
@@ -1,4 +1,4 @@
-.grid-container {
+.gridContainer {
   margin-top: 2em;
   display: grid;
   grid-template-columns: auto auto;
@@ -9,9 +9,10 @@
   padding: 2em;
   border: 0.01em solid rgb(118, 71, 24);
   box-shadow: inset 1em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
+  
 }
 
-.grid-item {
+.gridItem {
   box-shadow: 0.3em 0.2em 0.4em 0.1em rgba(6, 32, 4, 0.476);
   margin: 0.3em;
   display: flex;
@@ -35,4 +36,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.inscriptionSelector{
+  max-width: 9em;
+  border-radius: 2em;
+  background-color: rgba(242, 255, 223, 0.838);
 }
