Refactor: messages Container

--- a/src/components/ProgramSelection/ProgramSelection.css
+++ b/src/components/ProgramSelection/ProgramSelection.css
@@ -1,9 +1,10 @@
 .programContainer {
     /* display: flex; */
     /* flex-wrap: wrap; */
-    justify-content: center;
-    align-items: center;
-    min-width: 12em;
+    /* justify-content: center;
+    align-items: center; */
+    /* min-width: 12em; */
+    height: 100%;
     text-align: center;
 }
 
