--- a/src/containers/MessageApp/MessageApp.css
+++ b/src/containers/MessageApp/MessageApp.css
@@ -10,21 +10,23 @@
     
 }
 
-.programSelectionContainer {
-    /* position: fixed;
-    top: 0; */
+/* .programSelectionContainer {
+    position: fixed;
+    top: 0;
     width: 100%;
-    /* z-index: 1;  */
-}
+    z-index: 1; 
+} */
 
 .messageContainer {
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
     /* padding: 1rem; */
     margin-top: 1em;
     /* margin-bottom: 6em; */
     padding-top: 0.5em;
-    width: 90%;
+    /* width: 90%; */
+    /* width: 100% ; */
     border: 0.1em solid rgb(125, 6, 6);
     background-color: #f5f5f5;
     border-radius: 0.5em;
@@ -37,10 +39,11 @@
     
 }
 .messageText{
-    /* margin-bottom: 2em;  */
         padding-bottom: 0.5em;
         height: 28em; 
         overflow-y: auto; 
+        display: flex;
+        flex-direction: column;
 }
 
 
@@ -56,18 +59,39 @@
     margin: 0.5em;
     padding: 0.7em;
     border-radius: 1em;
+    word-wrap: break-word;
 }
 
 .messageItem p {
     margin: 0;
 }
 
+.deleteMessageButton{
+    font-size: 0.8em;
+text-align: center;
+background-color: #DCF8C6;
+        /* background-color: rgba(109, 10, 155, 0.608); */
+        color: rgb(246, 0, 0);
+        width: 1.5em;
+        height: 1.7em;
+        border-radius: 50%;
+        cursor: pointer;
+        border: 0.1em solid rgb(159, 3, 3);
+}
+
+.deleteMessageButton:hover {
+    background-color: rgb(66, 104, 12);
+    color: white;
+}
 .messageSend {
     background-color: #DCF8C6;
     align-self: flex-end;
+    max-width: 70%;
 }
 
 .messageFrom {
     background-color: #EAEAEA;
-    align-self: flex-end;
+    max-width: 70%;
+    /* width: 70%; */
+    align-self: flex-start;
 }
