--- a/src/containers/Student/Student.css
+++ b/src/containers/Student/Student.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    min-width: 100vw;
+    /* min-height: 100vh;
+    min-width: 100vw; */
 }
 
 .userCardTitle1{
