--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  height: auto;
-  min-height: 100vh;
+  /* height: auto; */
+  height: 100vh;
   width: 100vw;
-  margin: 0;
+  margin: auto;
   padding: 0;
   background-color: #b4de7a19;
   display: flex;
@@ -88,7 +88,6 @@
 }
 
 .tableHeaderRequest {
-  
   background-color: rgba(211, 241, 195, 0.389);
   flex: 1;
   overflow: hidden;
