--- a/src/components/InputMessage/InputMessage.css
+++ b/src/components/InputMessage/InputMessage.css
@@ -29,7 +29,7 @@
 }
 
 
-button {
+.inputMessageButton {
     background-color: #7f7c7591;
     color: #ffffff;
     border: 0.01em solid rgba(132, 4, 4, 0.464);
@@ -42,7 +42,7 @@ button {
         0.0em 0.02em 0.1em 0.1em rgba(21, 61, 9, 0.286);
 }
 
-button:hover {
+.inputMessageButton:hover {
     box-shadow: inset 0.04em 0.04em 0.5em 0.2em rgba(21, 61, 9, 0.532);
     text-shadow: none;
     /* transform: scale(0.96); */
