--- a/src/components/InputText/InputText.css
+++ b/src/components/InputText/InputText.css
@@ -1,8 +1,9 @@
 .normalInput {
     padding: 0.5rem;
-    padding-bottom: 0.5em;
+    padding-bottom: 0.6em;
     border-radius: 0.5em;
     font-size: 1em;
+    /* width: 20em; */
     background-color: #d2eeca4d; 
     box-shadow: inset 0.01em 0.01em 0.4em 0.1em rgba(10, 32, 14, 0.41); 
     border: 0.09em solid rgba(178, 137, 66, 0.706);
