--- a/src/components/ProgramSelection/ProgramSelection.css
+++ b/src/components/ProgramSelection/ProgramSelection.css
@@ -1,25 +1,57 @@
 .programContainer {
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* justify-content: center;
-    align-items: center; */
-    /* min-width: 12em; */
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top:2em;
+    position: fixed;
+    flex-direction: column;
+    /* height: 100%; */
+    width: 100%;
     text-align: center;
 }
 
+.programItemTitle{
+    background-color: #f2f2f262;
+    background-color: #500404b7;
+    border: 0.03em solid #de1616;
+    padding: 0.4em;
+    /* width: 70%; */
+    /* margin: 0.3em; */
+    cursor: pointer;
+    border-radius: 1em;
+    transition: background-color 0.3s ease;
+    box-shadow:
+    rgba(83, 2, 2, 0.17) 0em -1.4375em 1.5625em 0em inset,
+    rgba(117, 7, 7, 0.15) 0em -2.25em 1.875em 0em inset,
+    rgba(0, 0, 0, 0.1) 0em -4.9375em 2.5em 0em inset,
+    rgba(151, 4, 4, 0.06) 0em 0.125em 0.0625em,
+    rgba(132, 5, 5, 0.09) 0em 0.25em 0.125em,
+    rgba(134, 8, 8, 0.09) 0em 0.5em 0.25em,
+    rgba(120, 7, 7, 0.09) 0em 1em 0.5em,
+    rgba(109, 4, 4, 0.09) 0em -1em 2em 1em;
+    color: #fff;
+}
 
+.programItemTitle:hover {
+    background-color: #333;
+    box-shadow:none;
+    color: #fff;
+}
 .programItem{
-    background-color: #f2f2f2;
-    border: 0.01em solid #ccc;
+    background-color: #f2f2f262;
+    border: 0.01em solid #400202;
     padding: 0.5em;
+    /* width: 70%; */
     margin: 0.5em;
     cursor: pointer;
     border-radius: 1em;
     transition: background-color 0.3s ease;
+    /* color: #fff; */
+
 }
 
-.programItem.selected {
-    background-color: #333;
+.programItem:hover {
+    background-color: #500404b7;
+    border: 0.03em solid #de1616;
     color: #fff;
 }
