--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -1,3 +1,9 @@
+.loginDataUser {
+    box-shadow: inset 0.5em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
+    border-radius: 2em;
+    background-color: #699f212b;
+}
+
 .labelLogin {
     width: 10em;
     font-weight: bold;
@@ -5,13 +11,9 @@
     text-align: center;
     border: 0.1em solid rgba(71, 134, 50, 0.665);
     border-radius: 0.5em;
-    padding: 0.1em;
-    margin-top: 0.3em;
+    padding: 0.2em;
+    margin-top: 1em;
     background-color: #699f21bd;
+    margin-bottom: -0em;
 }
 
-.loginDataUser {
-    box-shadow: inset 0.5em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
-    border-radius: 2em;
-    background-color: #699f212b;
-}
