--- a/src/containers/CreateConvocation/CreateConvocation.css
+++ b/src/containers/CreateConvocation/CreateConvocation.css
@@ -1,3 +1,11 @@
+.convocationCreateContainer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .inputConvocation {
     text-align: center;
     width: 12em;
