--- a/src/containers/ConvocationDetail/ConvocationDetail.css
+++ b/src/containers/ConvocationDetail/ConvocationDetail.css
@@ -8,16 +8,12 @@
     flex-direction: column;
 }
 .programInfo {
-    /* padding: 0.2em; */
     border: 0.1em solid #749b7381;
     border-radius: 2em;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.programDetails {
-    /* margin-top: 0.3em; */
+    margin: 0.7em;
 }
 
 .detailItem {
@@ -25,20 +21,22 @@
 }
 
 .studentList {
+    margin: 0.7em;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 1em; /* Espacio entre estudiantes */
+    gap: 1em;
 }
 
 .studentItem {
-    /* flex: 1;  */
-    max-width: calc(50% - 20px); /* Establece el ancho máximo de cada columna (50% - espacio) */
-    padding: 10px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px; /* Espacio entre estudiantes */
+    height: 5em;
+    width:10em;
+    padding: 0.2em;
+    border: 0.1em solid #ccc;
+    border-radius: 1em;
     overflow: hidden;
+    text-align: center;
 }
 .titleDetail{
     text-align: center;
