--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,9 +1,9 @@
 .productCardContainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 2em;
+    justify-content: space-evenly;
     text-align: center;
+    max-width: 100em;
 }
 
 .productCardDesign {
