--- a/src/components/AkdemyButton/AkdemyButton.css
+++ b/src/components/AkdemyButton/AkdemyButton.css
@@ -1,5 +1,3 @@
-
-
 .akdemyButton {
     background-color: #90a729fd;
     color: #ffffff;
@@ -9,9 +7,17 @@
     font-size: 1em;
     cursor: pointer;
     margin-top: 1.3em;
-    transition: transform 0.2s ease, box-shadow 0.3s ease;
-    box-shadow: inset 0.04em 0.04em 0.5em 0.2em rgba(21, 61, 9, 0.532);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    box-shadow:
+        rgba(21, 61, 9, 0.532) 0.04em 0.04em 0.5em 0.2em inset,
+        rgba(0, 0, 0, 0.09) 0em -0.5em 1em 0em;
 }
-.akdemyButton:hover{
-    transform: scale(0.96);
+
+.akdemyButton:hover {
+    transform: scale(0.99);
+    box-shadow:
+        rgba(21, 61, 9, 0.532) 0.04em 0.04em 0.5em 0.2em inset,
+        rgba(130, 186, 24, 0.532) 0em -3em 2.2em 0em inset,
+        rgba(96, 147, 13, 0.532) 0em -4.9375em 2.5em 0em inset,
+        rgba(0, 0, 0, 0.2) 0em 0.125em 0.25em;
 }
