--- a/src/containers/ConvocationDetail/ConvocationDetail.css
+++ b/src/containers/ConvocationDetail/ConvocationDetail.css
@@ -1,43 +1,37 @@
 .convocationDetail {
-    margin: 1em;
-    margin-top: 4em;
-    padding: 0.3em;
-    border: 1em solid #749b7381;
-    border-radius: 2em;
-    display: flex;
-    flex-direction: column;
+    margin-top: 1.2em;
+    padding: 0 2em 2em;
+    border: 0.5em solid #69730d39;
+    border-radius: 1em;
+    max-width: 21.5em;
+    box-shadow:
+    rgba(0, 0, 0, 0.17) 0em -0.4375em 1.5625em 0em inset,
+    rgba(0, 0, 0, 0.15) 0em -0.25em 1.875em 0em inset,
+    rgba(0, 0, 0, 0.1) 0em -1.9375em 2.5em 0em inset,
+    rgba(0, 0, 0, 0.06) 0em 0.125em 0.0625em,
+    rgba(0, 0, 0, 0.09) 0em 0.25em 0.125em,
+    rgba(0, 0, 0, 0.09) 0em 0.5em 0.25em,
+    rgba(0, 0, 0, 0.09) 0em 1em 0.5em,
+    rgba(0, 0, 0, 0.09) 0em 2em 1em;
+    
 }
 .programInfo {
     border: 0.1em solid #749b7381;
-    border-radius: 2em;
+    box-shadow: inset 1em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
+    border-radius: 0.5em;
     display: flex;
     flex-direction: column;
+    padding: 1em;
     align-items: center;
     margin: 0.7em;
 }
 
 .detailItem {
     margin: 0.7em;
+    text-align: start;
+    
 }
 
-.studentList {
-    margin: 0.7em;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-}
-
-.studentItem {
-    height: 5em;
-    width:10em;
-    padding: 0.2em;
-    border: 0.1em solid #ccc;
-    border-radius: 1em;
-    overflow: hidden;
-    text-align: center;
-}
 .titleDetail{
     text-align: center;
     text-shadow: 0.05em 0.05em 0.06em rgba(0, 0, 0, 0.5);
