--- a/src/containers/Inscription/Inscription.css
+++ b/src/containers/Inscription/Inscription.css
@@ -14,6 +14,7 @@
 .dataInscription {
   box-shadow: 0.3em 0.2em 0.4em 0.1em rgba(6, 32, 4, 0.476);
   margin: 0.4em;
+  padding: 0 0.3em;
   display: flex;
   flex-direction: column;
   border: 0.01em solid rgb(20, 18, 16);
