--- a/src/containers/Profile/Profile.css
+++ b/src/containers/Profile/Profile.css
@@ -1,7 +1,4 @@
-
 .dataUser {
-    display: flex;
-    justify-content: center;
     border: 0.01em solid rgb(118, 71, 24);
     box-shadow: inset 1em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
     align-items: center;
@@ -12,27 +9,41 @@
     padding: 1.3em;
 }
 
-.profileLabel {
+.titleProfile {
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin: 2em 0 1em;
+    font-size: 1.2em;
     font-weight: bold;
-    text-align: center;
+    height: 4em;
+    padding: 0.5em;
+    border: 0.01em solid green;
+    border-radius: 0.5em;
+}
+
+.profileLabel {
+    /* display: flex; */
+    justify-content: center;
+    font-weight: bold;
     border: 0.1em solid rgba(71, 134, 50, 0.665);
     border-radius: 0.5em;
-    padding-bottom: 0.5em;
-    background-color: #699f21ac; 
+    padding: 0.1em;
+    background-color: #699f21ac;
 }
 
 .profileData {
-    padding: 0.5rem;
+    padding: 0.4em;
     padding-bottom: 0.5em;
     border-radius: 0.5em;
     margin-bottom: 0.5em;
     margin-left: 2em;
-    font-size: 1.3em;
-    background-color: #d2eeca4d; 
-    box-shadow: inset 0.01em 0.01em 0.4em 0.1em rgba(10, 32, 14, 0.41); 
+    font-size: 1.1em;
+    background-color: #d2eeca4d;
+    box-shadow: inset 0.01em 0.01em 0.4em 0.1em rgba(10, 32, 14, 0.41);
     border: 0.09em solid rgba(178, 137, 66, 0.706);
+    text-align: start;
+    overflow: hidden;
 }
 
 .containerButtons {
@@ -52,7 +63,6 @@
     border: none;
     border-radius: 1em;
     margin-left: 1em;
-    margin-bottom: -1.3em;
     font-size: 1em;
     cursor: pointer;
     border: 0.01em solid rgb(9, 71, 9);
